Fix hero overflow
Fix hero overflow issue on the index page.

--- a/css/custom.css
+++ b/css/custom.css
@@ -142,3 +142,25 @@ h1, h2, h3, h4, h5, h6 {
   border-color: #0e1d3f;
   color: #0e1d3f;
 }
+
+.hero-content {
+  background-color: rgba(255,255,255,0.7);
+  color: #14295B;
+  width: 50%;
+  max-width: 600px;
+}
+@media (max-width: 991.98px) {
+  .hero-content {
+      width: 60%;
+  }
+}
+@media (max-width: 767.98px) {
+  .hero-content {
+      position: static !important;
+      transform: none !important;
+      background-color: #fff;
+      padding: 2rem 1rem !important;
+      width: 100%;
+      max-width: none;
+  }
+}
